modified:   (New) Responsive Web Design/Build a Tribute Page/css/main.css

--- a/(New) Responsive Web Design/Build a Tribute Page/css/main.css
+++ b/(New) Responsive Web Design/Build a Tribute Page/css/main.css
@@ -34,6 +34,11 @@ p {
   font-family: tahoma, verdana, sans-serif;
   margin: auto 10%;
   line-height: 24px;
+  color:	#444444;
+}
+
+strong {
+  color: #111111;
 }
 
 body {
