--- a/Responsive-web-design/Product-Landing-Page/css/main.css
+++ b/Responsive-web-design/Product-Landing-Page/css/main.css
@@ -113,6 +113,7 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    gap: 1rem;
     align-items: center;
 }
 
