--- a/Responsive-web-design/Product-Landing-Page/css/main.css
+++ b/Responsive-web-design/Product-Landing-Page/css/main.css
@@ -70,6 +70,8 @@ input {
     height: clamp(6rem, 12%, min(14rem, 20vh));
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    width: 100%;
 }
 
 #header-img {
@@ -107,6 +109,10 @@ input {
 /* ------------------------------------------------ */
 
 /* ------------------- Sections ------------------- */
+
+main {
+    padding-top: clamp(6rem, 12%, min(14rem, 20vh));
+}
 
 section {
     width: min(95vw, 70rem);
